# phoenix

./: .env  .gitignore  .netlifyignore  .railwayignore  ADDITIONAL_IMPROVEMENTS.md  API_USAGE.md  APP_FEATURES_AND_IMPROVEMENTS.md  AUTO_UPDATE_STRATEGY.md  BRIEFCASE_COMMANDS.md  BUILD_AND_TEST.md  BUILD_COMPLETE_INSTRUCTIONS.md  BUILD_INFO.txt  BUILD_INSTALLERS.md  BUILD_INSTRUCTIONS.md  BUILD_LINUX.md  BUILD_LINUX_NOW.md  BUILD_LINUX_NOW.txt  BUILD_MACOS_NOW.md  BUILD_NOW.ps1  BUILD_STANDALONE.md  BUILD_STANDALONE_CLEAN.md  CHART_3D_UPDATE.md  DEMO.md  DEPLOYMENT_RECOMMENDATION.md  DESKTOP_APP_FEATURES.md  Dockerfile  Dockerfile.linux-build  EXECUTE_BUILD_NOW.txt  FINAL_BUILD.ps1  FIXED_DOWNLOADS.md  HOW_TO_TEST.md  INCOMPLETE_IMPLEMENTATIONS.md  LINUX_BUILD_REQUIREMENTS.md  LINUX_COMPATIBILITY.md  LOGS_VIEWER_GUIDE.md  MANUAL_BUILD_INSTRUCTIONS.md  MARKETING_SITE_GUIDE.md  Makefile  NATIVE_DESKTOP_FEATURES.md  POLISH_CHECKLIST.md  (+68 more)
.github/workflows/: build-all-platforms.yml
app/: config.py  data.py  database.py  dependencies.py  downloads.py  logging_config.py  main.py  main_refactored.py  models.py  sse.py
app/middleware/: __init__.py  error_handler.py  rate_limit.py
app/routers/: __init__.py  api.py  dashboard.py  health.py  rentals.py  streaming.py
downloads/: README.md  README_BUILD_STATUS.md
downloads/linux/: BUILD_STATUS.md  README.md
examples/live_charts/: README.md  chart.js  index.html  stream.js  styles.css
marketing-site/: README.md  index.html  netlify.toml
netlify-demo/: README.md  index.html
phoenix/: __init__.py  __main__.py
phoenix_dashboard/: __init__.py  __main__.py
phoenix_dashboard.dist-info/: METADATA  top_level.txt
sawdust dev/: dashboard.html
scripts/: run.sh  sse_smoke.py
src/components/: BotHealthTable.js
src/realtime/: __init__.py  eth_feed.py
static/css/: bot-explorer.css  charts.css  dashboard-enhancements.css  dashboard-theme.css  glassmorphism.css  ide-dashboard.css  theme.css
static/data/: sample_logs.json  sample_metrics.json
static/js/: BotHealthTable.js  bot-explorer.js  bot-profile.js  bots-page.js  dashboard-alpine.js  dashboard-ui.js  financial3d.js  graph3d.js  ide-dashboard.js  main.js  pointcloud3d.js
templates/: about.html  base.html  bot-explorer.html  bot-profile.html  bots.html  chart-annotations.html  dashboard.html  demo.html  downloads.html  home.html  ide-dashboard.html  index.html  logic-builder.html  logs.html  pointcloud.html  report.html  settings.html
templates/components/: bot-explorer.html  css_bar_chart.html  css_heatmap.html  css_line_chart.html  css_sparkline.html  css_status_ring.html
templates/partials/: global-sidebar.html  logs.html  metrics.html  top-bar.html
tests/: test_health.py
