[project]
name = "ethereum-bot-dashboard"
version = "0.1.0"
description = "Real-time Ethereum bot monitoring dashboard (FastAPI + SSE + HTMX)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "sse-starlette",
  "python-multipart",
  "web3",
  "python-dotenv",
]

[tool.uv]
dev-dependencies = [
  "ruff",
  "black",
]


