[project]
name = "phoenix_dashboard"
version = "0.1.0"
description = "Silverback recorder and bot controller client"
readme = "README.md"
# requires-python = ">=3.11"  # Temporarily commented for Briefcase
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "sse-starlette",
  "python-multipart",
  "web3",
  "python-dotenv",
  "pywebview>=5.0.0",
]

[tool.uv]
dev-dependencies = [
  "ruff",
  "black",
]

[tool.briefcase]
project_name = "Phoenix Dashboard"
bundle = "com.agworkywork.phoenixdashboard"
version = "0.1.0"
url = "https://github.com/agBabbbyCakes/phoenix"
license = { text = "MIT" }
author = "Alex Gonzalez"
author_email = ""

[tool.briefcase.app.phoenix_dashboard]
formal_name = "Phoenix Dashboard"
description = "Silverback recorder and bot controller client"
sources = [
  "app",
  "src",
  "phoenix_dashboard",
]
requires = [
  "fastapi",
  "uvicorn[standard]",
  "jinja2",
  "sse-starlette",
  "python-multipart",
  "web3",
  "python-dotenv",
  "pywebview>=5.0.0",
]
# Note: Removed tkinter dependency - using browser-based UI instead
icon = "resources/phoenix"
document_types = []
resources = [
  "static",
  "templates",
]

[tool.briefcase.app.phoenix_dashboard.macOS]
minimum_version = "10.14"

[tool.briefcase.app.phoenix_dashboard.windows]
minimum_version = "10"

[tool.briefcase.app.phoenix_dashboard.linux]
minimum_version = "18.04"
